--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".Activities.MainActivity">
+    tools:context=".activities.MainActivity">
 
     <RadioGroup
         android:id="@+id/rg_choose_location"
